# notez

./: Cargo.toml  README.md
src/: config.rs  main.rs  repo.rs
