[package]
name = "notez"
version = "0.1.0"
authors = ["Nicholas Pisacane <pisacanen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
dirs = "3.0.1"
